--- a/index.html
+++ b/index.html
@@ -2,19 +2,24 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>test-page</title>
+	<title>test page</title>
 	<link rel="shortcut icon" href="img/avatar.png" type="image/x-icon" />
 	<link rel="stylesheet" href="style/main.css">
 </head>
 <body>
 	<div class="welcome">
 		<p class="p1">Welcome</p>
-		<p class="p2">to the test page</p>
+		<p class="p2">to the scroll test page</p>
+		<div class="lineContainer">
+			<div class="line"></div>
+		</div>
 	</div>
-	<div class="lineContainer">
-		<div class="line"></div>
+	<div id="testfield">
+		<section class="panel un"><b>- un -</b></section>
+		<section class="panel deux"><b>- deux -</b></section>
+		<section class="panel trois"><b>- trois -</b></section>
+		<section class="panel quatre"><b>- quatre -</b></section>
 	</div>
-	<div id="testfield"></div>
 	<footer>
 		<div class="line"></div>
 		<div>
