--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
 		</div>
 	</div>
 	<div id="testfield">
-		<section class="panel un"><b>- un -</b></section>
-		<section class="panel deux"><b>- deux -</b></section>
-		<section class="panel trois"><b>- trois -</b></section>
-		<section class="panel quatre"><b>- quatre -</b></section>
+		<div class="box">
+			<section class="panel un"><b>- un -</b></section>
+			<section class="panel deux"><b>- deux -</b></section>
+			<section class="panel trois"><b>- trois -</b></section>
+			<section class="panel quatre"><b>- quatre -</b></section>
+		</div>
 	</div>
 	<footer>
 		<div class="line"></div>
