--- a/index.html
+++ b/index.html
@@ -20,16 +20,20 @@
 			<section class="panel deux"><b>- deux -</b></section>
 			<section class="panel trois"><b>- trois -</b></section>
 			<section class="panel quatre"><b>- quatre -</b></section>
+			<section class="panel cinq">
+				<p>Merci pour votre attention.</p>
+				<p>À bientôt!</p><br><br>
+				<footer>
+					<div class="line"></div>
+					<div>
+						<img src="img/avatar_1.png" alt="avatar">
+						<a href="https://github.com/pasajero0"> pasajero0.GitHub </a>
+						<p> - 2017 - </p>
+					</div>
+				</footer>
+			</section>
 		</div>
 	</div>
-	<footer>
-		<div class="line"></div>
-		<div>
-			<img src="img/avatar_1.png" alt="avatar">
-			<a href="https://github.com/pasajero0"> pasajero0.GitHub </a>
-			<p> - 2017 - </p>
-		</div>
-	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="js/index.js"></script>
 	<script src="js/lodash.js"></script>
