--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<link rel="stylesheet" href="style/main.css">
 </head>
 <body>
+	<div id="pagePreloader" class="preloader">
+		<div class="loader"></div>
+	</div>
 	<div class="welcome">
 		<p class="p1">Welcome</p>
 		<p class="p2">to the scroll test page</p>
@@ -21,8 +24,7 @@
 			<section class="panel trois"><b>- trois -</b></section>
 			<section class="panel quatre"><b>- quatre -</b></section>
 			<section class="panel cinq">
-				<p>Merci pour votre attention.</p>
-				<p>À bientôt!</p><br><br>
+				<b>FIN</b><br><br><br><br>
 				<footer>
 					<div class="line"></div>
 					<div>
