--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div id="pagePreloader" class="preloader">
-		<div class="loader"></div>
+		<h1>wait for it<span>.</span><span>.</span><span>.</span></h1>
 	</div>
 	<div class="welcome">
 		<p class="p1">Welcome</p>
@@ -19,12 +19,12 @@
 	</div>
 	<div id="testfield">
 		<div class="box">
-			<section class="panel un"><b>- un -</b></section>
-			<section class="panel deux"><b>- deux -</b></section>
-			<section class="panel trois"><b>- trois -</b></section>
-			<section class="panel quatre"><b>- quatre -</b></section>
+			<section class="panel un"><b>- one -</b></section>
+			<section class="panel deux"><b>- two -</b></section>
+			<section class="panel trois"><b>- three -</b></section>
+			<section class="panel quatre"><b>- four -</b></section>
 			<section class="panel cinq">
-				<b>FIN</b><br><br><br><br>
+				<b>END</b><br><br><br><br>
 				<footer>
 					<div class="line"></div>
 					<div>
